# odc-service

./: README.md  setup.cfg
config/: datacube.conf
mapproxy/: README.md  mapproxy.yaml
ows/: ows_cfg.py  ows_debug.py  ows_env.sh  run_ows.sh
ows/layers/: aerosol_monthly_AOD550_mean.py  aerosol_monthly_FM_AOD550_mean.py  analysed_sst.py  analysed_sst_anomaly.py  beta_c4grass.py  chuk_lakes.py  chuk_landcover.py  chuk_landcover_historical.py  chuk_maxst.py  chuk_power.py  chuk_railways.py  chuk_rivers.py  chuk_roads.py  chuk_suburban_builtarea.py  chuk_urban_builtarea.py  ice_sheet_monthly_sec.py  oc_chlor_a.py  oc_monthly_chlor_a.py  sea_ice_fraction.py  sea_ice_fraction_anomaly.py  soil_moisture.py  sst_uncertainty.py
product_definitions/aerosol_monthly/: aerosol_monthly.yaml  aerosol_monthly_importer.py
product_definitions/chuk_builtarea/: chuk_builtarea.yaml  chuk_builtarea_dataset.yaml
product_definitions/chuk_landcover/: chuk_landcover.yaml  chuk_landcover_dataset.yaml  chuk_landcover_dataset.yaml.bak
product_definitions/chuk_landcover_historical/: chuk_landcover_historical.yaml  chuk_landcover_historical_yearly_importer.py
product_definitions/chuk_landwater/: chuk_landwater.yaml  chuk_landwater_dataset.yaml
product_definitions/chuk_maxst/: chuk_maxst.yaml  chuk_maxst_dataset.yaml
product_definitions/chuk_power/: chuk_power.yaml  chuk_power_dataset.yaml
product_definitions/chuk_road_rail/: chuk_road_rail.yaml  chuk_road_rail_dataset.yaml
scripts/: sync.sh
test/: check_times.py  leaflet.html  rasterio_test.py  test.py  timestore.py
(+69 files in other folders)
