[metadata]
name = custom_drivers
version = 0.0,1
author = Niall
author_email = niall.mccarroll@gmail.com
description = Test
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com
project_urls =
    Bug Tracker = https://github.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.entry_points]

datacube.plugins.io.read =
    netcdfx = custom_drivers.netcdfx:reader_driver_init

datacube.plugins.io.write =
    netcdfx = custom_drivers.netcdfx:reader_driver_init


[options.packages.find]
where = src

